# lingq-anki

./: .gitignore  EXAMPLE-CODE-LINGQ-API.md  LINGQ-DOCS.md  RUNBOOK.md  __init__.py  apply_engine.py  config.json  config_dialog.py  config_manager.py  config_model.py  conftest.py  diff_engine.py  hint_reconciliation.py  lingq_client.py  manifest.json  matching.py  progress_sync.py  pyproject.toml  run_options.py  sync_dialog.py
tests/: test_apply_engine.py  test_diff_engine.py  test_hint_reconciliation.py  test_matching.py  test_progress_sync.py  test_run_options.py
